--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencies {
 
     // Third party dependencies ----------------------------------------------------------------------------------------
 
+    // https://mvnrepository.com/artifact/org.jetbrains/annotations
+    implementation 'org.jetbrains:annotations:26.0.1'
+
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
