--- a/build.gradle
+++ b/build.gradle
@@ -26,17 +26,33 @@ repositories {
 }
 
 dependencies {
-    // CraftsBlock dependencies ----------------------------------------------------------------------------------------
+    // CraftsBlock related dependencies ---------------------------------------------------------------------------------------
 
-    implementation "de.craftsblock:craftsnet:3.4.3-pre4"
+    // https://repo.craftsblock.de/#/releases/de/craftsblock/craftscore/bom
+    implementation platform("de.craftsblock.craftscore:bom:3.8.11")
 
-    implementation "de.craftsblock.craftsnet.modules:streamencoders:1.0.0-SNAPSHOT"
+    // https://repo.craftsblock.de/#/releases/de/craftsblock/craftscore/utils
+    implementation "de.craftsblock.craftscore:utils"
+
+    // https://repo.craftsblock.de/#/releases/de/craftsblock/craftscore/cache
+    implementation "de.craftsblock.craftscore:cache"
+
+    // https://repo.craftsblock.de/#/releases/de/craftsblock/craftscore/event
+    implementation "de.craftsblock.craftscore:event"
+
+    // https://repo.craftsblock.de/#/releases/de/craftsblock/craftscore/json
+    implementation "de.craftsblock.craftscore:json"
+
+    // https://repo.craftsblock.de/#/releases/de/craftsblock/craftsnet
+    implementation "de.craftsblock:craftsnet:3.5.2"
+
+    // https://repo.craftsblock.de/#/releases/de/craftsblock/craftsnet/modules/streamencoders
+    implementation "de.craftsblock.craftsnet.modules:streamencoders:1.0.1"
 
     // Third party dependencies ----------------------------------------------------------------------------------------
 
     // https://mvnrepository.com/artifact/org.jetbrains/annotations
-    implementation 'org.jetbrains:annotations:26.0.1'
-
+    implementation 'org.jetbrains:annotations:26.0.2-1'
 }
 
 publishing {
